<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fetchWeather</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="location">Location</string>
    <string name="country">Country:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="weather">Get Weather</string>
   
</resources>
